[package]
name = "cade"
version = "0.8.0"
homepage = "http://cade.works"
repository = "https://github.com/cadeworks/cade"
authors = ["avkonst@gmail.com"]
readme = "README.md"
keywords = [
 "container",
 "orchestration",
 "microservices",
 "devops",
 "deployment",
 "stateful",
 "stateless",
 "cluster",
 "docker",
 "weave",
 "kubernetes",
 "docker-swarm",
 "dcos",
 "etcd",
 "aws",
 "vagrant"
]
categories = ["development-tools"]
license = "MIT"
license-file = "LICENSE"

publish = false

[dependencies]
log = "0.4.1"
env_logger = "0.5.10"
clap = "2.27.1"
error-chain = "0.11.0"
reqwest = { version = "0.8.5" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
chrono = { version = "0.4.2", features = ["serde"] }
openssl-probe = "0.1.2"
uuid = { version = "0.6", features = ["serde", "v4"] }
urlencoding = "1.0.0"
human-panic = "0.4.0"
valico = "1"
